Adding initial support for virtual threads. Introduced virtual threads in SynchronizedSlide. Now requires Java 21